# mini-nx-cad

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md
apps/cad_desktop/: AppController.cpp  AppController.h  AssemblyTreeWidget.cpp  AssemblyTreeWidget.h  CMakeLists.txt  FeaturePropertyPanel.cpp  FeaturePropertyPanel.h  FeatureTreeWidget.cpp  FeatureTreeWidget.h  MainWindow.cpp  MainWindow.h  MateEditorPanel.cpp  MateEditorPanel.h  main.cpp
cmake/: Dependencies.cmake  Sanitizers.cmake  StaticAnalysis.cmake  Warnings.cmake
docs/algorithms/: sketch_solver.md
docs/architecture/: overview.md
docs/design/: features.md  topology.md
docs/testing/: test_plan.md
docs/user-guide/: demo_notes.md
include/mnx/assembly/: AssemblyDocument.h  AssemblyQueries.h  AssemblySolver.h  ComponentInstance.h  MateConstraint.h  MateType.h  TransformNode.h
include/mnx/commands/: AddConstraintCommand.h  Command.h  CommandContext.h  CommandManager.h  CompositeCommand.h  CreateSketchEntityCommand.h  DeleteSketchEntityCommand.h  EditDimensionCommand.h  MoveSketchHandleCommand.h  RemoveConstraintCommand.h
include/mnx/constraints/: AngleConstraint.h  CoincidentConstraint.h  Constraint.h  ConstraintType.h  Dimension.h  DistanceConstraint.h  EqualLengthConstraint.h  HorizontalConstraint.h  ParallelConstraint.h  PerpendicularConstraint.h  RadiusConstraint.h  TangentConstraint.h  VerticalConstraint.h
include/mnx/geometry/: Arc2D.h  BSpline2D.h  Bezier2D.h  Circle2D.h  Curve2D.h  Line2D.h  PlanarSurface.h  Plane.h  Point2.h  Point3.h  Polyline2D.h  Segment2D.h  Surface.h
include/mnx/modeling/: Body.h  BodyBuilder.h  DisplayMesh.h  Feature.h  (+14 more)
samples/: README.md
samples/assemblies/: two_box_assembly.mnx_assembly.json
samples/parts/: rectangle_extrude.mnx.json  revolve_pin.mnx.json
samples/sketches/: basic_rectangle_sketch.mnx.json
scripts/: mini_nx_bootstrap.py
scripts/benchmarks/: extrude_benchmark.py
scripts/generators/: generate_bracket.py
scripts/regression/: basic_extrude_regression.py
src/: CMakeLists.txt
src/assembly/: AssemblyDocument.cpp  AssemblyQueries.cpp  AssemblySolver.cpp  ComponentInstance.cpp  MateConstraint.cpp  TransformNode.cpp
src/commands/: AddConstraintCommand.cpp  CommandManager.cpp  CompositeCommand.cpp  CreateSketchEntityCommand.cpp  DeleteSketchEntityCommand.cpp  EditDimensionCommand.cpp  MoveSketchHandleCommand.cpp  RemoveConstraintCommand.cpp
src/constraints/: AngleConstraint.cpp  CoincidentConstraint.cpp  Constraint.cpp  Dimension.cpp  DistanceConstraint.cpp  EqualLengthConstraint.cpp  HorizontalConstraint.cpp  ParallelConstraint.cpp  PerpendicularConstraint.cpp  RadiusConstraint.cpp  TangentConstraint.cpp  VerticalConstraint.cpp
src/core/: Mat3.cpp  Mat4.cpp  Transform2D.cpp  Transform3D.cpp
src/geometry/: Arc2D.cpp  BSpline2D.cpp  Bezier2D.cpp  Circle2D.cpp  Line2D.cpp  PlanarSurface.cpp  Plane.cpp  Polyline2D.cpp  Segment2D.cpp
src/geometry/algorithms/: Bounds2D.cpp  CurveSampling.cpp  Distances2D.cpp  Intersections2D.cpp  Projections2D.cpp
src/modeling/: Body.cpp  BodyBuilder.cpp  DisplayMesh.cpp  ExtrudeBuilder.cpp  ExtrudeFeature.cpp  Feature.cpp  FeatureContext.cpp  FeatureGraph.cpp  FeatureResult.cpp  MeshBuilder.cpp  PartDocument.cpp  ProfileUtils.cpp  RebuildEngine.cpp  RevolveAxis2D.cpp  RevolveBuilder.cpp  RevolveFeature.cpp  SketchFeature.cpp
src/persistence/: JsonConverters.cpp  PersistenceUtils.cpp  ProjectDeserializer.cpp  ProjectSerializer.cpp
src/rendering/: BodyRenderer.cpp  Camera.cpp  Mesh.cpp  MeshBuffer.cpp  Picking.cpp  RenderItem.cpp  RenderScene.cpp  SceneView.cpp
src/scripting/: PythonBindingsExport.cpp  PythonBindingsFeature.cpp  PythonBindingsPart.cpp  PythonBindingsSketch.cpp  PythonModule.cpp
src/sketch/: SelectionState.cpp  Sketch.cpp  SketchArc.cpp  SketchCircle.cpp  SketchEntity.cpp  SketchLine.cpp  SketchPlane.cpp  SketchPoint.cpp  SketchSpline.cpp
src/sketch/gui/: CircleTool.cpp  LineTool.cpp  RectangleTool.cpp  SelectTool.cpp  SelectionManager.cpp  SketchController.cpp  SketchRenderer.cpp  SketchView.cpp  SnapManager.cpp
src/solver/: ConstraintEquation.cpp  EquationBuilder.cpp  JacobianBuilder.cpp  SketchSolver.cpp  SolveResult.cpp  SolverDiagnostics.cpp  SolverVariable.cpp  VariableRegistry.cpp
src/topology/: Body.cpp  CoEdge.cpp  Edge.cpp  Face.cpp  Loop.cpp  Shell.cpp  TopologyQueries.cpp  TopologyValidator.cpp  Vertex.cpp
tests/: CMakeLists.txt  phase0_smoke_tests.cpp
tests/assembly/: AssemblyTests.cpp
tests/commands/: CommandTests.cpp
tests/constraints/: ConstraintMetadataTests.cpp  ConstraintValidationTests.cpp
tests/core/: AABB2Tests.cpp  AABB3Tests.cpp  IdTests.cpp  MatrixTests.cpp  StatusResultTests.cpp  TestSupport.h  ToleranceTests.cpp  Transform2DTests.cpp  Transform3DTests.cpp  Vec2Tests.cpp  Vec3Tests.cpp
tests/geometry/: Arc2DTests.cpp  Bounds2DTests.cpp  Circle2DTests.cpp  CurveTests.cpp  IntersectionTests.cpp  Line2DTests.cpp  PlaneSurfaceTests.cpp  PointTests.cpp  Polyline2DTests.cpp  ProjectionTests.cpp  Segment2DTests.cpp
tests/integration/: SampleAssetTests.cpp  ScriptingSmokeTests.cpp
tests/integration/regression_cases/: README.md
tests/integration/regression_cases/assembly_distance_mate/: case.json
tests/integration/regression_cases/extrude_rectangle/: case.json
tests/integration/regression_cases/open_profile_rejected/: case.json
tests/integration/regression_cases/persistence_invalid_schema/: case.json
tests/integration/regression_cases/revolve_axis_clearance/: case.json
tests/integration/regression_cases/sketch_solver_rectangle/: case.json
tests/integration/regression_cases/topology_broken_loop/: case.json
tests/modeling/: ExtrudeFeatureTests.cpp  FeatureGraphTests.cpp  RevolveFeatureTests.cpp
tests/persistence/: PersistenceTests.cpp
tests/rendering/: RenderingTestMain.cpp  RenderingTests.cpp
tests/sketch/: GeometryRefTests.cpp  SketchEntityTests.cpp  SketchPlaneTests.cpp  SketchTestMain.cpp  SketchTests.cpp
tests/solver/: SketchSolverTests.cpp
tests/topology/: TopologyTests.cpp
(+79 files in other folders)
